# RenderBase

./: .gitignore  CMakeLists.txt  FontRenderer.h  FontRendererImpl.cpp  FontRendererImpl.h  README  RenderContextImpl.cpp  RenderContextImpl.h  SpriteImpl.cpp  SpriteImpl.h  TypeAdapter.h  build.py  main.cpp
AppShell/: CMakeLists.txt  main.cpp
AppShell/src/: main.cpp
Constructor/: CMakeLists.txt
Constructor/include/: BuildingBerth.h  ConstructionLibrary.h  ConstructorTypes.h  HullConstructor.h  LibraryImpl.h  ModelConstructor.h  Object.h  ObjectConstructor.h  ObjectImpl.h  ObjectLibrary.h
Constructor/src/: BuildingBerth.cpp  BuildingBerth.h  ConstructionLibraryImpl.cpp  ConstructionLibraryImpl.h  ConstructionLibraryPrimitives.cpp  Constructor.cpp  HullConstructor.cpp  Libraryimpl.cpp  MeshLibraryImpl.h  MeshLibraryPrimitives.cpp  ModelConstructor.cpp  ObjectConstructor.cpp  ObjectConstructor.h  ObjectImpl.cpp  ObjectImpl.h  ObjectLibraryImpl.cpp  ObjectLibraryImpl.h  ObjectLibraryPrimitives.cpp
Constructor/test/: BasicTests.cpp  BuildingBerthTest.cpp  MeshBuilderTest.cpp  MeshLibraryTest.cpp  ObjectLibraryTest.cpp  ObjectTest.cpp
Engine/: CMakeLists.txt  RenderContextImpl.cpp
Engine/include/: CameraImpl.h  Engine.h  EngineImpl.h  FontRenderer.h  LightImpl.h  ObjectImpl.h  Program.h  RenderContext.h  SceneElementImpl.h  SceneImpl.h  Sprite.h  TypeAdapter.h  common.h
Engine/shaders/: fshader.shader  fshader.shader.h  vshader.shader  vshader.shader.h
Engine/src/: CameraImpl.cpp  EngineImpl.cpp  LightImpl.cpp  ObjectImpl.cpp  Program.cpp  RenderContext.cpp  RenderContextImpl.cpp  RenderContextImpl.h  SceneElementImpl.cpp  SceneImpl.cpp  fshader.shader  vshader.shader
Engine/test/: CameraImplTest.cpp  EngineStubs.h  EngineTest.cpp  SceneElementImplTest.cpp  custom_macros.h
Game/: CMakeLists.txt
Game/include/: Game.h  InputHandler.h
Game/src/: Game.cpp  InputHandler.cpp  main.cpp
Includes/: FontRenderer.h  RenderContext.h  Sprite.h  common.h
Media/Scripts/: Scene0.lua  Scene1.lua
Overmind/: CMakeLists.txt
Overmind/generator/: script_generator.py  table.txt
Overmind/include/: OvermindImpl.h
Overmind/src/: OvermindImpl.cpp
Overmind/test/: OvermindTest.cpp
Overmind/test_scripts/: building.lua  registerObject.lua
ResourceOverseer/: CMakeLists.txt
ResourceOverseer/include/: ResourceOverseer.h  ResourceOverseerImpl.h
ResourceOverseer/src/: ResourceOverseerImpl.cpp
Scripts/: erase_file_type.py  utils.py
Utils/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  MathBasics.h  Utils.h
Utils/include/: ErrorHandler.h  HandleImpl.h  HandleImpl.i  MathBasics.h  QuadTree.h  RangeList.h  Tree2D.h  Utils.h
Utils/src/: ErrorHandler.cpp  Utils.cpp
Utils/test/: QuadTreeTest.cpp  RangeListTest.cpp  RangeVectorTest.cpp
Workbench/: CMakeLists.txt
Workbench/MakeShared/: CMakeLists.txt  main.cpp  main.i
Workbench/QTWindowTest/: CMakeLists.txt  main.cpp
cmake/: useful_functions.cmake
docs/: Gameconcept.docx
include/: Construction.h  Constructor.h  Engine.h  EngineInput.h  Library.h  LibraryPrimitives.h  MathBasics.h  NativeStructures.h  Object.h  Overmind.h  Reflections.h  ResourceOverseer.h  Resources.h  ScriptReflections.h  Utils.h  common.h
include/internal/: Reflections.h  ScriptCommon.h
